--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "react-quill": "^2.0.0",
     "react-rangeslider": "2.2.0",
     "react-rnd": "^10.4.10",
     "react-syntax-highlighter": "^15.5.0",
