--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "prettier": "@renovamen/prettier-config",
   "dependencies": {
+    "@iconify-json/ion": "^1.2.6",
     "@milkdown/core": "^7.3.6",
     "@milkdown/plugin-history": "^7.3.6",
     "@milkdown/plugin-listener": "^7.3.6",
